# cs-4803-team10

./: .gitignore  .gitmodules  CMakeLists.txt  CONFIG_SETUP.md  CONTRIBUTING.md  EXAMPLES.md  GEMINI_INTEGRATION.md  GEMINI_QUICK_START.md  INSTALL_INSTRUCTIONS.md  LICENSE  PLUGIN_INSTALL_FIXED.sh  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  SETUP.md  SonaraLandingPage.html  build.sh  config.h.example  index.html
Sonara_Plugin_Distribution/: Install_Sonara.sh  QUICK_START.txt  README.txt
Sonara_Plugin_Distribution/Sonara.component/Contents/: Info.plist
Source/: ChangesLogger.cpp  ChangesLogger.h  GeminiClient.cpp  GeminiClient.h  KeywordMapper.cpp  KeywordMapper.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/AudioProcessing/: Compressor.cpp  Compressor.h  Equalizer.cpp  Equalizer.h  ReverbProcessor.cpp  ReverbProcessor.h
